[build-system]
requires = [
    "meson-python",
    "setuptools",
    "wheel",
    "numpy",
    "cython"
]
build-backend = "mesonpy"

[project]
name = "pygslib"
version = "0.0.0.7.1.1"  
description = "Python module for mineral resource estimation and geostatistics"
authors = [
    { name = "Adrian Martinez Vargas", email = "adriangeologo@yahoo.es" }
]

readme = "README.md"
license = { text = "MIT and GPL" }
requires-python = ">=3.10"
dependencies = [
    "ipython",
    "matplotlib",
    "jupyter",
    "vtk>=9.0",
    "bokeh",
    "colour",
    "numpy>=2.2.5",
    "scipy",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/opengeostat/pygslib"
